--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -1,33 +1,511 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+*{
+  padding: 0px;
+  margin: 0px;
+}
+body{
+  background-color: #000;
+  color: #fff;
+}
+.nav{
+  display: flex;
+  justify-content: space-between;
+  margin: 20px;
+}
+.logo h2{
+  font-size: 35px;
+  color: cadetblue;
+  padding-left: 20px;
+}
+ul{
+  display: flex;
+  gap: 20px;
+  list-style: none;
+  font-size: 20px;
+  padding-top: 10px;
+}
+.link{
 
-:root {
-  --foreground-rgb: 0, 0, 0;
-  --background-start-rgb: 214, 219, 220;
-  --background-end-rgb: 255, 255, 255;
+  color: #fff;
+  text-decoration: none;
+}
+.link:hover{
+  color: pink;
+}
+.bt:hover{
+  color: #000;
+  background-color: rgb(242, 159, 206);
+}
+.btn{
+  padding: 10px;
+}
+.bt{
+  padding: 10px;
+  font-size: medium;
+ border: 2px rgb(6, 146, 151) solid;
+ background-color: #000;
+ border-radius: 5px;
+  color: #fff;
+}
+.hero{
+  display: flex;
+  margin-left: 20%;
+  margin-top: 5%;
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+.img{
+  width: 300px;
+  height: 300px;
+  border-radius: 50%;
+}
+.info-div{
+  margin-left: 150px;
+}
+h1{
+  font-size: 70px;
+  color: cadetblue;
+}
+.btn2{
+  display: flex;
+  gap: 30px;
+}
+.bt1{
+  padding: 10px;
+  font-size: 20px;
+ border: 2px rgb(6, 146, 151) solid;
+ background-color: #000;
+ border-radius: 5px;
+  color: #fff;
+}
+.bt-li{
+  text-decoration: none;
+  color: #fff;
+}
+.heading{
+  font-size: 40px;
+  color: cadetblue;
+  text-align: center;
+  text-decoration: underline;
+}
+.img1{
+  width: 300px;
+  height: 300px;
+  border-radius: 10%;
+  margin-left: 38%;
+  margin-top: 3%;
+  margin-bottom: 3%;
+}
+h2{
+  color: cadetblue;
+  text-align: center;
+  font-size: 35px;
+}
+p{
+  color: rgb(138, 220, 223);
+  text-align: justify;
+  margin-left: 10%;
+  margin-right: 10%;
+  font-size: 20px;
+  margin-top: 2%;
+  margin-bottom: 2%;
+}
+.btn3{
+  display: flex;
+  gap: 30px;
+  justify-content: center;
+  margin-bottom: 3%;
+}
+.icon{
+  font-size: 33px;
+  color: rgb(53, 53, 232);
+
+}
+.bt2{
+  background-color: #000;
+  color: #000;  
+}
+.skill-h2{
+  font-size: 30px;
+  text-align: left;
+  margin: 20px;
+  color: #fff;
+  font-weight: 300;
+  margin-left: 10%;
+}
+.bar{
+  margin-left: 10%;
+  height: 15px;
+  background-color: rgb(27, 204, 27);
+  width: 450px;
+  border: 2px white solid;
+  border-radius: 20px;
+}
+.bar1{
+  margin-left: 10%;
+  height: 15px;
+  background-color: rgb(215, 67, 67);
+  width: 350px;
+  border: 2px white solid;
+  border-radius: 20px;
+}
+.bar2{
+  margin-left: 10%;
+  height: 15px;
+  background-color: rgb(242, 242, 118);
+  width: 400px;
+  border: 2px white solid;
+  border-radius: 20px;
+}
+.bar3{
+  margin-left: 10%;
+  height: 15px;
+  background-color: rgb(27, 204, 27);
+  width: 450px;
+  border: 2px white solid;
+  border-radius: 20px;
+}
+.bar4{
+  margin-left: 10%;
+  height: 15px;
+  background-color: rgb(29, 148, 203);
+  width: 300px;
+  border: 2px white solid;
+  border-radius: 20px;
+}
+.bar5{
+  margin-left: 10%;
+  height: 15px;
+  background-color: rgb(239, 115, 212);
+  width: 280px;
+  border: 2px white solid;
+  border-radius: 20px;
+}
+.project{
+  display: flex;
+
+  width: 100%;
+}
+.pro-h2{
+  font-size: 35px;
+  font-weight: 400;
+  text-align: left;
+  margin-top: 20px;
+  width: 30%;
+  padding-left: 2%;
+}
+.pro-p{
+  font-size: 20px;
+  text-align: left;
+  margin-right: 50px;
+  color: rgb(142, 244, 247);
+  width: 70%;
+  padding-left: 0px;
+}
+.main{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: row;
+  width: 100%;
+}
+.card{
+  width: 28%;
+  height: 550px;
+  margin: auto;
+  margin-bottom: 20px;
+  border: 2px solid wheat;
+  border-radius: 20px;
+}
+.card:hover{
+  box-shadow: 15px 15px 20px yellowgreen;
+}
+.img2{
+  width: 94%;
+  height: 200px;
+  margin: 10px 10px;
+  margin-right: 5px;
+  border: 2px solid red;
+  border-radius: 5px;
+}
+
+.card-h{
+  font-size: 25px;
+  margin: 20px;
+  margin-left: 30px;
+  color: rgb(231, 231, 95);
+}
+.card-p{
+  margin-bottom: 20px;
+}
+.span{
+  color: #fff;
+  text-decoration: none;
+  font-size: 20px;
+  margin: 20px;
+  margin-left: 30px;
+  border: 2px solid cadetblue;
+  padding: 3px 6px;
+  border-radius: 10px;
+}
+.tag-btn{
+  display: flex;
+  margin-top: 20px;
+  gap: 20px;
+}
+.tag{
+  margin-left: 30px;
+  background-color: pink;
+  
+}
+.tag,.tag1,.tag2{
+  width: auto;
+  height: auto;
+  font-size: 20px;
+  color: #000;
+  padding: 10px;
+  border:cadetblue;
+  border-radius: 5px;
+}
+.tag1{
+  background-color: rgb(150, 157, 222);
+}
+.tag2{
+  background-color: rgb(240, 148, 240);
+}
+.contact{
+  color: #fff;
+  position: relative;
+}
+.container{
+  padding: 96px 20px;
+  padding-left: auto;
+  padding-right: auto;
+}
+.con{
+  display: flex;
+  flex-direction: column;
+  text-align: center;
+  width: 100%;
+  margin-bottom: 48px;
+}
+.con-p{
+  max-width: 66.66%;
+  margin-left: auto;
+    margin-right: auto;
+    margin-bottom: 1rem;
+    font-size: 1rem /* 16px */;
+    line-height: 1.5rem 
+}
+.form{
+  width: 50%;
+  margin-left: auto;
+  margin-right: auto;
+}
+.form1{
+  display: flex;
+  margin: -0.5rem;
+  flex-wrap: wrap;
+}
+.form2{
+  padding: 0.5rem;
+  width: 50%;
+}
+.form3{
+  position: relative;
+}
+.label{
+  line-height: 1.75rem ;
+  font-size: 0.875rem /* 14px */;
+    line-height: 1.25re;
+    color:cadetblue;
+}
+.input{
+  width: 100%;
+   border-radius: 0.25rem;
+   font-size: 1rem /* 16px */;
+   line-height: 1.5rem /* 24px */;
+   outline: 2px solid transparent;
+   outline-offset: 2px;
+   padding-top: 0.25rem /* 4px */;
+   padding-bottom: 0.25rem /* 4px */;
+   padding-left: 0.75rem /* 12px */;
+   padding-right: 0.75rem /* 12px */;
+   line-height: 2rem ;
+   transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+   transition-duration: 150ms;
+   transition-duration: 200ms;
+   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.email{
+  padding: 0.5rem ;
+  width: 50%;
+}
+.email1{
+  position: relative;
+}
+.email2{
+  line-height: 1.75rem;
+  color: cadetblue;
+}
+.email3{
+  width: 100%;
+  border-radius: 0.25rem;
+  border-width: 1px;
+  font-size: 1rem /* 16px */;
+  line-height: 1.5rem /* 24px */;
+  outline: 2px solid transparent;
+    outline-offset: 2px;
+    padding-top: 0.25rem /* 4px */;
+    padding-bottom: 0.25rem /* 4px */;
+    padding-left: 0.75rem /* 12px */;
+    padding-right: 0.75rem /* 12px */;
+    line-height: 2rem;
+    transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+    transition-duration: 150ms;
+    transition-duration: 200ms;
+    transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.msg{
+  padding: 0.5rem /* 8px */;
+  width: 100%;
+}
+.msg1{
+  position: relative;
+}
+.msg2{
+  line-height: 1.75rem /* 28px */;
+  color: cadetblue;
+}
+.msg3{
+  width: 100%;
+  border-radius: 0.25rem ;
+  border-width: 1px;
+  height: 8rem /* 128px */;
+  font-size: 1rem /* 16px */;
+  line-height: 1.5rem /* 24px */;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  padding-top: 0.25rem /* 4px */;
+  padding-bottom: 0.25rem /* 4px */;
+  padding-left: 0.75rem /* 12px */;
+  padding-right: 0.75rem /* 12px */;
+  resize: none;
+  line-height: 1.5rem;
+  transition-property: color, background-color, border-color, text-decoration-color, fill, stroke;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+  transition-duration: 150ms;
+  transition-duration: 200ms;
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+.con-btn{
+  display: flex;
+  margin-left: auto;
+  margin-right: auto;
+  border-width: 0px;
+  padding-top: 0.5rem /* 8px */;
+  padding-bottom: 0.5rem /* 8px */;
+  padding-left: 2rem /* 32px */;
+  padding-right: 2rem /* 32px */;
+  outline: 2px solid transparent;
+  outline-offset: 2px;
+  border-radius: 0.25rem /* 4px */;
+}
+.fot{
+  padding: 0.5rem /* 8px */;
+  width: 100%; 
+   padding-top: 2rem;
+   margin-top: 2rem /* 32px */;
+   border-top-width: 1px;
+   text-align: center;
+}
+.fot1{
+  color: rgb(141, 51, 206);
+}
+.fot2{
+  line-height: 1.5;
+  margin-top: 1.25rem /* 20px */;
+  margin-bottom: 1.25rem /* 20px */;
+}
+.fot3{
+  display: inline-flex;
+  gap: 20px;
+}
+.fot4{
+  color: blue;
+}
+.icons{
+  width: 1.25rem /* 20px */;
+  height: 1.25rem /* 20px */;
+}
+@media (max-width:600px){
+  body{
+    padding: 10px;
+    margin: 10px;
+  };
+
+  .form{
+    width: 30%;
   }
-}
+  .main{
+    display: flex;
+    flex-direction: row;
+    height: 400px;
+  }
+  .card{
+    width: 90%;
+    display: block;
+    margin-bottom: 20px;
+  }
+  .project{
+    display: flex;
+    flex-direction: column;
+  }
+  .tag-btn{
+    display: none;
+  }
+  h1{
+    padding: 10px;
+    font-size: 20px;
+  }
+  p{
+    font-size: 10px;
+    padding: 10px;
+  }
+  h2{
+    font-size: 18px;
+    padding: 10px;
+  }
+  .pro-h2{
+    width: 90%;
+    padding: 10px;
+    margin: 10px;
+    text-align: center;
+  }
+  .pro-p{
+    width: 100%;
+    text-align: justify;
 
-body {
-  color: rgb(var(--foreground-rgb));
-  background: linear-gradient(
-      to bottom,
-      transparent,
-      rgb(var(--background-end-rgb))
-    )
-    rgb(var(--background-start-rgb));
-}
-
-@layer utilities {
-  .text-balance {
-    text-wrap: balance;
+  }
+  .img1{
+    margin-left: 30%;
+  }
+  .logo{
+    display: none;
+  }
+  .btn{
+    display: none;
+  }
+  .hero{
+    display: flex;
+    flex-direction: column;
+  }
+  .info-div{
+    width: 90%;
+    font-size: 30px;
+    margin: 10px 0px;
+    padding: 10px;
+  }
+  .info-div h1{
+    font-size: 35px;
   }
 }
